fix alignment issue in "about myself"

--- a/styles.css
+++ b/styles.css
@@ -230,7 +230,7 @@ section > h2 {
   margin: 12px 0;
 }
 
-.about h2 {
+.about h {
   justify-content: center;
 }
 
